--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(240, 240, 230);
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 #index1 {
@@ -18,12 +19,14 @@ body {
 }
 
 .input {
-    width: 50%;
-    padding: 12px 20px;
-    margin: 8px 0;
+    width: 30%;
+    padding: 12px 15px;
+    margin: 8px 10px;
     box-sizing: border-box;
-    border-radius: 10px;
-    border: 2px;
+    border-radius: 8px;
+    border: #2a348a;
+    
+    
 }
 
 .button {
@@ -37,10 +40,14 @@ body {
         cursor: pointer;
         font-size: 18px;
 }
-    
-
-
-
+.button:hover {
+    background-color: #87b4e7;
+  }   
+ 
+.container{
+    max-width: 1000px;
+    margin: auto;
+}
 
 
 
