--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,14 @@ body {
     font-weight: bold;
 }
 
+#index8{
+    color: #636fe1;
+    text-align: center;
+    font-size: 18px;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+}
+
 .input {
     width: 30%;
     padding: 12px 15px;
@@ -59,24 +67,37 @@ body {
     height: auto;
     text-align: center;
     border-collapse: collapse;
-    
+
 }
 
 .table,
 th,
 tr,
 td {
-    border: 1px solid ;
+    border: 1px solid;
     padding: 16px;
 }
 
-.center{
-    float:center;
+.center {
+    float: center;
     display: flex;
     justify-content: center;
-    
-    height: 200px;
-  }
-  
 
-  
+    height: 200px;
+}
+
+.img {
+    border: 5px solid pink;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.img1 {
+    text-align: center;
+    border: 5px solid pink;
+    border-radius: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
